<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="com.example.yiren.weather.MainActivity">


    <LinearLayout
        android:id="@+id/ll_search"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="296dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_background"
            android:fontFamily="@font/nunito_semibold"
            android:hint="@string/hint"
            android:padding="20dp"
            android:textAlignment="gravity"
            android:textSize="20sp"
            android:textCursorDrawable="@drawable/color_cursor"
            android:inputType="textNoSuggestions"/>

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_search_black_24dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_search"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center_horizontal"
        android:text="Halifax"
        android:textColor="@color/colorBlack"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/tv_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_city"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/nunito_semibold"
        android:gravity="center_horizontal"
        android:text="windy"
        android:textColor="@color/colorBlack"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_temporature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_weather"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center_horizontal"
        android:text="4"
        android:textColor="@color/colorBlack"
        android:textSize="72sp" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/tv_date"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/description"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/tv_description"
        android:layout_marginTop="30dp"
        android:text="@string/min" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toEndOf="@+id/tv_weather"
        android:text="@string/max" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_min"
        android:layout_marginStart="34dp"
        android:layout_marginTop="10dp"
        android:text="@string/humidity" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_alignTop="@+id/textView7"
        android:text="@string/clouds" />

    <TextView
        android:id="@+id/tv_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_max"
        android:layout_alignBottom="@+id/tv_max"
        android:layout_alignStart="@+id/textView5"
        android:fontFamily="@font/nunito_bold"
        android:text="-5"
        android:textColor="@color/colorBlack"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/tv_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:fontFamily="@font/nunito_bold"
        android:text="5"
        android:textColor="@color/colorBlack"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/tv_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/textView7"
        android:fontFamily="@font/nunito_bold"
        android:text="90"
        android:textColor="@color/colorBlack"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/tv_clouds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView14"
        android:layout_alignBottom="@+id/textView14"
        android:layout_alignStart="@+id/textView8"
        android:fontFamily="@font/nunito_bold"
        android:text="30"
        android:textColor="@color/colorBlack"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_description"
        android:layout_below="@+id/tv_temporature"
        android:layout_marginBottom="10sp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/colorBlack"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_toEndOf="@+id/tv_clouds"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/percent"
        android:textColor="@color/colorBlack"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_toEndOf="@+id/tv_humidity"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/percent"
        android:textColor="@color/colorBlack"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_toEndOf="@+id/tv_max"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/celsius"
        android:textColor="@color/colorBlack"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_min"
        android:layout_alignBottom="@+id/tv_min"
        android:layout_alignEnd="@+id/textView18"
        android:layout_toEndOf="@+id/tv_min"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/celsius"
        android:textColor="@color/colorBlack"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_temporature"
        android:layout_alignBottom="@+id/tv_temporature"
        android:layout_alignEnd="@+id/textView17"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center_horizontal"
        android:text="@string/celsius"
        android:textColor="@color/colorBlack"
        android:textSize="72sp" />

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_above="@+id/tv_date"
        android:layout_toEndOf="@+id/textView7" />


</RelativeLayout>
